# AEIC

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  data-dictionary.md  documentation-review-2.md  documentation-review.md  genindex.html  index.html  main_page.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  test-quality-notebook-index.md  test-quality.md
.doctrees/: environment.pickle  index.doctree  main_page.doctree
.doctrees/data/IO/: io_formats.doctree
.doctrees/src/: bada.doctree  cli.doctree  configuration.doctree  emission.doctree  gridding.doctree  mission_database.doctree  missions.doctree  oag.doctree  parsers.doctree  performance_model.doctree  storage.doctree  utilities.doctree  weather.doctree
.doctrees/src/AEIC/: performance_model.doctree
.doctrees/src/BADA/: bada.doctree
.doctrees/src/developer/: conventions.doctree  grid-map-optimization.doctree  releases.doctree  tools.doctree
.doctrees/src/emissions/: emission.doctree
.doctrees/src/gridding/: gridding.doctree
.doctrees/src/missions/: mission.doctree  mission_database.doctree  missions.doctree  oag.doctree
.doctrees/src/parsers/: parsers.doctree
.doctrees/src/performance_models/: legacy_performance_model.doctree  performance_model_api.doctree  performance_model_files.doctree  performance_models.doctree
.doctrees/src/trajectories/: trajectories.doctree  trajectory_builders.doctree  trajectory_data.doctree  trajectory_stores.doctree
.doctrees/src/utils/: utils.doctree
.doctrees/src/weather/: weather.doctree
.github/workflows/: lint_pytest_deploy.yml  release.yml  sphinx_deploy.yml  test_python.yml
_sources/: index.rst.txt  main_page.md.txt  main_page.rst.txt
_sources/data/IO/: io_formats.rst.txt
_sources/src/: cli.md.txt  configuration.md.txt  emission.md.txt  gridding.md.txt  mission_database.md.txt  performance_model.rst.txt  storage.md.txt  utilities.md.txt  weather.md.txt
_sources/src/BADA/: bada.rst.txt
_sources/src/developer/: conventions.md.txt  grid-map-optimization.md.txt  releases.md.txt  tools.md.txt
_sources/src/emissions/: emission.rst.txt
_sources/src/gridding/: gridding.rst.txt
_sources/src/missions/: mission_database.md.txt  missions.md.txt  oag.md.txt
_sources/src/trajectories/: trajectories.md.txt  (+3 more)
data/IO/: default_config.toml  io_formats.html  sample_performance_model.toml
data/airports/: airports-patch.csv
data/engines/: APU_data.toml  EDB_data_06_2025.toml  sample_edb.xlsx
data/fuels/: SAF.toml  conventional_jetA.toml
data/missions/: sample_missions_10.toml
data/weather/: sample_weather_subset.nc
docs/: Makefile  conf.py  index.rst  main_page.md  main_page.rst
docs/src/: bada.md  cli.md  configuration.md  emission.md  emission.rst  gridding.md  mission_database.md  missions.md  oag.md  parsers.md  parsers.rst  storage.md  utilities.md  weather.md
notebooks/: configuration-example.ipynb  create-golden-test-data.ipynb  end-to-end-simulation.ipynb  end-to-end-simulation.py  performance-model-abstraction.ipynb  reproducibility-example.py  simulation-checks.ipynb  simulation-profiling.ipynb  test-cases.ipynb
scripts/: filter_airports.py  make_golden_test_data.py  make_test_airports.py  release.sh  run_legacy_verification.py
src/: bada.html  cli.html  configuration.html  emission.html  gridding.html  mission_database.html  missions.html  oag.html  parsers.html  performance_model.html  storage.html  utilities.html  weather.html
src/AEIC/: cli.py  config.py  constants.py  performance_model.html  performance_model.py  units.py  version.py  weather.py
src/BADA/: aircraft_parameters.py  bada.html  fuel_burn_base.py  helper_functions.py  model.py
src/IO/: default_config.toml
src/commands/: convert_oag_data.py  oag_query.py
src/developer/: conventions.html  grid-map-optimization.html  releases.html  tools.html
src/emissions/: APU_emissions.py  EI_CO2.py  EI_NOx.py  EI_PMnvol.py  EI_PMvol.py  emission.html  emission.py  lifecycle_CO2.py
src/gridding/: grid.py  gridding.html
src/missions/: OAG_db.py  __init__.py  custom_types.py  database.py  filter.py  mission.html  mission.py  mission_database.html  missions.html  oag.html  oag.py  query.py  writable_database.py
src/parsers/: LTO_reader.py  OAG_reader.py  OPF_reader.py  PTF_reader.py  parsers.html
src/performance_models/: legacy_performance_model.html  performance_model_api.html  performance_model_files.html  performance_models.html
src/trajectories/: trajectories.html  trajectory_builders.html  trajectory_data.html  trajectory_stores.html
src/utils/: __init__.py  airports.py  custom_types.py  helpers.py  spatial.py  standard_atmosphere.py  standard_fuel.py  units.py  utils.html  weather_utils.py
src/weather/: draw.py  main.py  navigation.py  trajectory.py  utils.py  weather.html
tests/: conftest.py  oag-2019-test-subset.sqlite  subproc.py  test_adjustable_legacy_builder.py  test_config.py  test_dimensions.py  test_edb.py  test_emission_functions.py  test_emissions.py  test_emissions_storage.py  test_golden.py  test_gridding.py  test_kernels.py  test_legacy_verification.py  test_matlab_verification.py  test_mission_db.py  test_mission_db_creation.py  test_model_utilities.py  test_oag_handling.py  test_performance_model.py  test_performance_table.py  test_read_EDB_data.py  test_storage.py  test_thrust_modes.py  test_trajectories.py  test_trajectory_simulation.py  test_trajectory_stores.py  test_weather.py  utils.py
(+198 files in other folders)
