[project]
name = "AEIC"

version = "0!1.0.0a1"

authors = [
    {name = "Wyatt Giroux", email = "girouxw@mit.edu"},
    {name = "Prakash Prashanth", email = "prash@mit.edu"},
    {name = "Prateek Ranjan", email = "prateekr@mit.edu"},
    {name = "Aditeya Shukla", email = "aditeya@mit.edu"},
    {name = "Raymond Speth", email = "speth@mit.edu"},
]

readme = "README.md"

license = "MIT"

requires-python = ">=3.13"

dependencies = [
    "click",
    "numpy",
    "scipy",
    "pandas",
    "pyproj",
    "tqdm",
    "xarray",
    "httpx>=0.28.1",
    "timezonefinder>=8.0.0",
    "netcdf4>=1.7.3",
    "cachetools>=6.2.1",
    "matplotlib>=3.10.7",
]

[dependency-groups]
dev = [
    "pytest",
    "sphinx",
    "sphinx_rtd_theme",
    "myst-parser",
    "pytest-cov>=6.2.1",
    "ipykernel>=6.30.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Require that the package is available for macOS ARM.
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'"
]

[project.scripts]
convert-oag-data = "commands.convert_oag_data:run"

[tool.ruff]
# Use Black-compatible defaults
line-length = 88

# Optionally, choose which rule sets to enable; this is a typical starting point.
# Remove or extend as you like.
lint.select = ["E", "F", "W", "I", "UP"]  # pycodestyle, pyflakes, warnings, isort, pyupgrade
lint.ignore = []                           # specify ignores here

# If you want Ruff to auto-format with Black style when you run
#   ruff format .
# you don't need any extra options—the default formatter already follows Black’s 88-char width.

[tool.black]
line-length = 88

[tool.ruff.format]
quote-style = "preserve"  # keep whatever the file already uses, dont change single quotes to double
