[project]
name = "AEIC"

version = "0.2.0"

authors = [
    {name = "Wyatt Giroux", email = "girouxw@mit.edu"},
    {name = "Prakash Prashanth", email = "prash@mit.edu"},
    {name = "Prateek Ranjan", email = "prateekr@mit.edu"},
    {name = "Aditeya Shukla", email = "aditeya@mit.edu"},
    {name = "Raymond Speth", email = "speth@mit.edu"},
]

readme = "README.md"

license = "MIT"

requires-python = ">=3.13,<3.14"

dependencies = [
    "httpx>=0.28.1",
    "timezonefinder>=8.0.0",
    "netcdf4>=1.7.3",
    "cachetools>=6.2.1",
    "matplotlib>=3.10.7",
    "openpyxl>=3.1.5",
    "pydantic>=2.12.5",
    "pyproj>=3.7.2",
    "tqdm>=4.67.1",
    "click>=8.3.1",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
    "pandas>=2.3.3",
    "xarray>=2025.12.0",
    "tomli-w>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.2.1",
    "ipykernel>=6.30.1",
    "enum-tools>=0.13.0",
    "sphinx-toolbox>=4.0.0",
    "ruff>=0.14.8",
    "pytest>=9.0.2",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "myst-parser>=4.0.1",
    "bump-my-version>=1.2.6",
]

[project.scripts]
convert-oag-data = "AEIC.commands.convert_oag_data:run"
make-performance-model = "AEIC.commands.make_performance_model:cli"
make-test-airports = "AEIC.commands.make_test_airports:run"
make-golden-test-data = "AEIC.commands.make_golden_test_data:run"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
# Require that the package is available for macOS ARM.
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'"
]

[tool.uv.build-backend]
module-name = "AEIC"
wheel-exclude = ["airports.csv"]
source-exclude = ["airports.csv"]

[tool.bumpversion]
current_version = "0.2.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
commit_args = "--no-verify"
tag = false
tag_name = "v{new_version}"
tag_message = "Release v{new_version}"

[tool.ruff]
extend-exclude = ["*.ipynb"]

# Use Black-compatible defaults
line-length = 88

# Optionally, choose which rule sets to enable; this is a typical starting point.
# Remove or extend as you like.
lint.select = ["E", "F", "W", "I", "UP"]  # pycodestyle, pyflakes, warnings, isort, pyupgrade
lint.ignore = []                           # specify ignores here

# If you want Ruff to auto-format with Black style when you run
#   ruff format .
# you don't need any extra options—the default formatter already follows Black’s 88-char width.

[tool.black]
line-length = 88

[tool.ruff.format]
quote-style = "preserve"  # keep whatever the file already uses, dont change single quotes to double

[tool.pytest]
# Numpy claims these warnings are harmless, so filter them out:
# https://github.com/numpy/numpy/blob/46268caa719db95ab2198bcd619f0e3120d7c52e/numpy/__init__.py#L704-L707
filterwarnings = ["ignore:numpy.ndarray size changed:RuntimeWarning"]
